# python-interview

./: 404.html  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  sitemap.xml
docs/: docs.md  index.html
report/test/: tests.xml
search/: search_index.json
src/python-interview/: __init__.py
src/python_interview/: __init__.py  python_interview.py
tests/python-interview/: test_python-interview.py
tests/python_interview/: test_python-interview.py
