[metadata]
name = python-interview
version = 0.1.0
author = becky2sawyer
author_email = becky2sawyer@gmail.com
description = 파이 인터뷰 준비
long_description = file: README.md
long_description_content_type = text/markdown
url = https://becky2sawyer.github.io/python-interview
project_urls =
    Bug Tracker = https://github.com/becky2sawyer/python-interview/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    python-interview-ping = python-interview:ping
